# HeadlessWindowsAutomation

./: .gitignore  CMakeLists.txt  LICENSE  cmake-vs2022-x64.bat  readme.md
lib/: AssemblyInfo.cs.in  CMakeLists.txt
lib/src/: AutomationElementFinder.cs  AutomationElementWrapper.cs  CustomCondition.cs  ProcessHelper.cs  WindowsAPIHelper.cs
package/: CMakeLists.txt  generate_nuspec.cmake  readme.md  template.nuspec.in
